--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "crypto-js": "^4.2.0",
     "gsap": "^3.12.5",
     "pinia": "^2.1.7",
     "three": "^0.167.1",
