--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bitcoin-core": "^4.2.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.19.2"
   }
 }
