--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bitcoin-core": "^4.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "simplex-noise": "^4.0.3"
   }
 }
