--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "alea": "^1.0.1",
     "axios": "^1.7.3",
     "crypto-js": "^4.2.0",
     "gsap": "^3.12.5",
     "pinia": "^2.1.7",
+    "simplex-noise": "^4.0.3",
     "three": "^0.167.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
